--- a/notes-app-client/src/App.css
+++ b/notes-app-client/src/App.css
@@ -7,6 +7,27 @@
   --success-color: #28a745;
 }
 
+.Home .notes h4 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  overflow: hidden;
+  line-height: 1.5;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.Home .notes p {
+  color: #666;
+}
+
+.NewNote form {
+  padding-bottom: 15px;
+}
+
+.NewNote form textarea {
+  height: 300px;
+  font-size: 24px;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
